--- a/src/Playground.Api/appsettings.Development.json
+++ b/src/Playground.Api/appsettings.Development.json
@@ -14,13 +14,13 @@
         "Args": {
           "path": "./logs/log-.txt",
           "rollOnFileSizeLimit": true,
-          //"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
-          "rollingInterval": "Day",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day"
         }
       }
     ],
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
-  }
+  },
+  "AllowedHosts": "*"
 }
