--- a/src/Playground.Api/appsettings.json
+++ b/src/Playground.Api/appsettings.json
@@ -14,9 +14,8 @@
         "Args": {
           "path": "./logs/log-.txt",
           "rollOnFileSizeLimit": true,
-          //"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
-          "rollingInterval": "Day",
-          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day"
         }
       }
     ],
