--- a/src/Identity/Identity.Api/appsettings.json
+++ b/src/Identity/Identity.Api/appsettings.json
@@ -14,10 +14,9 @@
       {
         "Name": "File",
         "Args": {
-          "path": "./logs/log-.txt",
-          "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true,
-          "formatter": "Serilog.Formatting.Json.JsonFormatter"
+          "path": "logs\\log-.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day"
         }
       }
     ],
