--- a/src/Identity/Identity.Repository/Identity.Repository.csproj
+++ b/src/Identity/Identity.Repository/Identity.Repository.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
-    <PackageReference Include="Serilog" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Identity.Model\Identity.Model.csproj" />
   </ItemGroup>
 
 </Project>
