--- a/src/Identity/Identity.Api/Identity.Api.csproj
+++ b/src/Identity/Identity.Api/Identity.Api.csproj
@@ -12,7 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Shared\Playground.Extensions\Playground.Extension.csproj" />
+		<ProjectReference Include="..\..\Shared\Playground.Extensions\Playground.Extension.csproj" />
+		<ProjectReference Include="..\Identity.Repository\Identity.Repository.csproj" />
 	</ItemGroup>
 
 </Project>
