Update dependencies, add Ocelot, and refactor controllers
Updated `Directory.Packages.props` to upgrade `MMLib.SwaggerForOcelot` to 8.3.0 and add `Ocelot` and `Ocelot.Provider.Polly` references. Removed `WeatherForecastController.cs` and `WeatherForecast.cs`. Updated `Playground.Gateway.csproj` to exclude `ocelot.json`, add package references, folder includes, and a project reference. Enhanced `Program.cs` with Ocelot, Polly, Swagger, logging, CORS, and middleware configurations. Added new `ocelot.json` with empty arrays. Introduced `HostBuilderExtensions.cs` for configuration. Updated identity API `Program.cs` to use `HostBuilderConfiguration`. Renamed and added methods in `ServicesExtension.Cors.cs`. Added `Class1.cs` and `Playground.Utility.csproj` for a new utility project.

--- a/src/Gateway/Playground.Gateway.csproj
+++ b/src/Gateway/Playground.Gateway.csproj
@@ -8,8 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="ocelot.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MMLib.SwaggerForOcelot" />
+    <PackageReference Include="Ocelot" />
+    <PackageReference Include="Ocelot.Provider.Polly" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Playground.Extensions\Playground.Extension.csproj" />
   </ItemGroup>
 
 </Project>
