--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,7 +16,9 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Identity.Stores" Version="8.0.1" />
-    <PackageVersion Include="MMLib.SwaggerForOcelot" Version="8.2.0" />
+    <PackageVersion Include="MMLib.SwaggerForOcelot" Version="8.3.0" />
+    <PackageVersion Include="Ocelot" Version="23.3.3" />
+    <PackageVersion Include="Ocelot.Provider.Polly" Version="23.3.3" />
     <PackageVersion Include="Serilog" Version="3.1.1" />
     <PackageVersion Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageVersion Include="Serilog.Enrichers.Environment" Version="2.3.0" />
